--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,7 +6,7 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor = "let satellite of satellites" [class.warning]="SpaceDebris">
+    <tr class="data-row" *ngFor = "let satellite of satellites">
         <td>{{satellite.name}}</td>
         <td>{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
